--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BrandBite - White-Label Restaurant Ordering System</title>
+    <title>BrandBite</title>
     <meta name="description" content="Customize your restaurant ordering system in one click. Online ordering, loyalty rewards, real-time order tracking, and branded experiences for restaurants and cafes." />
     <meta name="author" content="BrandBite" />
     <meta name="keywords" content="restaurant ordering system, white-label, loyalty rewards, order tracking, restaurant technology" />
@@ -12,12 +12,9 @@
     <meta property="og:title" content="BrandBite - White-Label Restaurant Ordering System" />
     <meta property="og:description" content="Customize your restaurant ordering system in one click. Online ordering, loyalty rewards, real-time order tracking." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="BrandBite - White-Label Restaurant Ordering System" />
     <meta name="twitter:description" content="Customize your restaurant ordering system in one click." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <script type="application/ld+json">
     {
@@ -25,7 +22,7 @@
       "@type": "SoftwareApplication",
       "name": "BrandBite",
       "applicationCategory": "BusinessApplication",
-      "description": "White-label restaurant ordering and loyalty system",
+      "description": "White-label restaurant/cafe ordering and loyalty system",
       "offers": {
         "@type": "Offer",
         "price": "0",
